force-app/main/default/objects/Price_List_Item__c/Price_List_Item__c.object-meta.xml
<CustomObject>
    <label>Price List Item</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Price List Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price List Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>