force-app/main/default/objects/Price_List_Item__c/fields/Price_List__c.field-meta.xml
<CustomField>
    <fullName>Price_List__c</fullName>
    <label>Price List</label>
    <referenceTo>Price_List__c</referenceTo>
    <relationshipLabel>Price List Items</relationshipLabel>
    <relationshipName>Price_List_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>