force-app/main/default/objects/Price_List_Item__c/fields/Produkt__c.field-meta.xml
<CustomField>
    <fullName>Produkt__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Produkt</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Price List Items</relationshipLabel>
    <relationshipName>Price_List_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>