force-app/main/default/objects/Price_List_Item__c/fields/Rate_Code__c.field-meta.xml
<CustomField>
    <fullName>Rate_Code__c</fullName>
    <formula>Produkt__r.Part__c</formula>
    <label>Rate Code</label>
    <type>Text</type>
</CustomField>